# scoring-system

./: README.md  docker-compose.yaml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
backend/src/: .isort.cfg  run.py
backend/src/instance/: quotes.db
backend/src/quotes/: __init__.py  config.py
backend/src/quotes/core/: mdm.py
backend/src/quotes/db/: _schemas.sql  tables.sql
backend/src/quotes/models/: auth.py  core.py  dq.py  quotes.py
backend/src/quotes/routes/: __init__.py  auth.py  dq.py  dwh.py  model_catalog.py  monitoring.py  observability.py  quotes.py
backend/src/quotes/static/: swagger.yml
backend/src/quotes/test/: quote_model.json  quote_model_wrong.json  test_quote.py
backend/src/quotes/utils/: __init__.py  db_tables.py  db_tables_archive.py  input.py  quotes_manager.py  users.py
backend/src/scripts/: sql_script.py  update_sql.sql
front_nss/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
front_nss/public/: index.html  manifest.json
front_nss/src/: App.js  index.css  index.js
front_nss/src/components/: Copyright.jsx  Header.jsx  Sidebar.jsx  Topbar.jsx
front_nss/src/data/: mockData.js
front_nss/src/hooks/: useAuth.jsx  useTheme.jsx
front_nss/src/pages/DWH/: DataMart.jsx
front_nss/src/pages/ModelCatalog/: ModelCatalog.jsx
front_nss/src/pages/ModelMonitoring/: ModelMonitoring.jsx  ReportList.jsx
front_nss/src/pages/Observability/: IncidentList.jsx
front_nss/src/utils/: api.js
(+17 files in other folders)
